--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
-name: React CI Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ dev, stage, main ]
-  pull_request:
-    branches: [ dev, stage, main ]
+    branches: [dev, stage, main]
 
 jobs:
   build:
@@ -14,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -22,5 +20,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build project
+      - name: Build app
         run: npm run build
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/react-ts-app:${{ github.ref_name }}
+            ${{ secrets.DOCKER_USERNAME }}/react-ts-app:latest
